--- a/projects/infrastructure-project.yaml
+++ b/projects/infrastructure-project.yaml
@@ -8,9 +8,13 @@ spec:
   sourceRepos:
     - 'https://github.com/schwja04/k8s-homelab'
   destinations:
+    - namespace: 'argocd'
+      server: '*'
     - namespace: 'cert-manager'
       server: '*'
     - namespace: 'external-secrets'
+      server: '*'
+    - namespace: 'kube-system'
       server: '*'
     - namespace: 'monitoring'
       server: '*'
