--- a/apps/infrastructure/argocd/base/kustomization.yaml
+++ b/apps/infrastructure/argocd/base/kustomization.yaml
@@ -3,5 +3,9 @@ kind: Kustomization
 
 namespace: argocd
 
-resources:
-  - https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
+configMapGenerator:
+  - name: argocd-cm
+    namespace: argocd
+    behavior: merge
+    literals:
+      - kustomize.buildOptions=--enable-helm --load-restrictor LoadRestrictionsNone
