--- a/apps/infrastructure/argocd/overlays/production/kustomization.yaml
+++ b/apps/infrastructure/argocd/overlays/production/kustomization.yaml
@@ -3,3 +3,10 @@ kind: Kustomization
 
 resources:
   - ../../base
+
+configMapGenerator:
+  - name: argocd-cm
+    namespace: argocd
+    behavior: merge
+    literals:
+      - kustomize.buildOptions=--enable-helm --load-restrictor LoadRestrictionsNone
